[gd_scene load_steps=2 format=3 uid="uid://c5783ti8g731p"]

[ext_resource type="Script" path="res://UI/attack_details.gd" id="1_bmaa2"]

[node name="AttackDetails" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_bmaa2")

[node name="AttackType" type="Label" parent="."]
layout_mode = 0
offset_right = 131.0
offset_bottom = 23.0
text = "Type"

[node name="AttackDamage" type="Label" parent="."]
layout_mode = 0
offset_top = 27.0
offset_right = 216.0
offset_bottom = 50.0
text = "Damage"

[node name="AttackDescription" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 58.0
offset_right = 186.0
offset_bottom = 204.0
bbcode_enabled = true
text = "Description"
